tests/integration/errors/test_struct_missing_one_required.sn
# Error test: struct literal missing one required field

struct Point =>
    x: double
    y: double

fn main(): void =>
    var p: Point = Point { x: 1.0 }
    print("Should not compile\n")
